fixed overflow and gray page in github.io

--- a/style/env.css
+++ b/style/env.css
@@ -1,4 +1,4 @@
-#body{
+.body{
     background-color: black;
 }
 #form{
@@ -9,6 +9,10 @@
     left: 50%;
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
+}
+.inPage{
+    margin: 0px;
+    border: 0px;
 }
 .font{
     font-size: xx-large;
